src/tests/binary-operators/14.txt
binary-operators/14.c:2:5: error: invalid operands to binary '+' (have 'char *' and 'char')
     "a" + 'a';
     ^
